@@ -1,3 +1,5 @@
+* Allow to invoice at once sub-projects with a different party
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 
